[tool.poetry]
name = "house-price"
version = "0.1.0"
description = ""
authors = ["oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pingouin = "^0.5.4"
notebook = "^7.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
